# scraper_framework

./: .dockerignore  .flake8  .gitignore  Dockerfile  GITHUB_ACTIONS_SETUP.md  README.md  README_CLIENT.md  docker-compose.client.yml  pyproject.toml
.github/workflows/: ci-cd.yml  manual-scraping.yml  scheduled-scraping.yml
configs/: logging.yaml
configs/jobs/: client_template.yaml  directory_static.yaml  dynamic_example.yaml  dynamic_test.yaml  example_static.yaml  run_csv.yaml  run_processing_example.yaml  run_sheets.yaml  run_test.yaml  scheduled_example.yaml
scripts/: run-client-docker.ps1  run-client-docker.sh
src/scraper_framework/: config_models.py  main.py
src/scraper_framework/adapters/: __init__.py  base.py  registry.py
src/scraper_framework/adapters/sites/: __init__.py  base_next_requests.py  books_toscrape.py  directory_generic.py  dynamic_example.py  dynamic_test.py  test_static.py
src/scraper_framework/core/: engine.py  factory.py  models.py
src/scraper_framework/enrich/: base.py  detail_page.py
src/scraper_framework/fetch/: strategies.py
src/scraper_framework/http/: client.py  playwright_client.py  policies.py  response.py  selenium_client.py  selenium_steps.py
src/scraper_framework/parse/: cards.py  html_utils.py  parsers.py
src/scraper_framework/process/: __init__.py  base.py  registry.py  runner.py
src/scraper_framework/process/plugins/: __init__.py  basic.py
src/scraper_framework/sinks/: base.py  csv_sink.py  gsheet_sink.py  jsonl_sink.py
src/scraper_framework/state/: __init__.py  base.py  sqlite_store.py
src/scraper_framework/transform/: dedupe.py  normalizers.py  validators.py
src/scraper_framework/utils/: hashing.py  logging.py  time.py
tests/: test_adapter_contracts.py  test_engine_integration.py  test_factory_dynamic_engines.py  test_html_parser_and_adapter.py  test_incremental_engine.py  test_incremental_state.py  test_normalizers.py  test_processing_pipeline.py  test_regressions.py  test_simple.py  test_streaming_mode.py  test_unit.py  test_validation.py
