[project]
name = "scraper-framework"
version = "0.1.0"
description = "Config-driven scraping framework (HTML + JSON API) with adapters, normalization, dedupe, sinks."
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
  "PyYAML>=6.0.1",
  "gspread>=6.0.0",
  "google-auth>=2.22.0",
  "APScheduler>=3.10.0",
  "pydantic>=2.0.0",
  "selenium>=4.0.0",
  "webdriver-manager>=4.0.0"
]

[project.scripts]
scrape = "scraper_framework.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "flake8>=6.0.0",
  "mypy>=1.0.0",
  "black>=23.0.0",
  "isort>=5.12.0"
]
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers -ra"
markers = [
  "unit: Unit tests",
  "integration: Integration tests"
]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
allow_untyped_defs = true
allow_incomplete_defs = true
allow_untyped_calls = true
exclude = ["venv", "build", "dist"]

[[tool.mypy.overrides]]
module = [
    "yaml.*",
    "requests.*",
    "bs4.*",
    "gspread.*",
    "google.*",
    "apscheduler.*"
]
ignore_missing_imports = true

[tool.black]
line-length = 127
target-version = ["py310", "py311"]
extend-exclude = '''
/(
  | \.git
  | \.venv
  | venv
  | build
  | dist
  | \.eggs
  | \.mypy_cache
  | \.pytest_cache
)/
'''

[tool.isort]
profile = "black"
line_length = 127
skip_gitignore = true
